--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -75,6 +75,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="OpenMap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="MoveForward/Back",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward/Back",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveForward/Back",Scale=1.000000,Key=Gamepad_LeftY)
